syntax = "proto3";
import "google/protobuf/empty.proto";


option java_multiple_files = true;
option java_package = "sep3.project.protobuf";
option java_outer_classname = "FeedbackProto";

message Feedback{
  optional string id = 1;
  int32 grade = 2;
  string comment = 3;
}

message ResponseGetFeedback{
  Feedback feedback = 1;
}
message RequestGetFeedbackById{
  string feedbackId = 1;
}
message RequestGetFeedbackByHomeworkIdAndStudentUsername{
  string homeworkId = 1;
  string username = 2;
}
message RequestAddFeedback{
  string homeworkId = 1;
  string studentUsername = 2;
  Feedback feedback = 3;
}
message ResponseAddFeedback{
  Feedback feedback = 1;
}
service FeedbackService{
  rpc addFeedback(RequestAddFeedback) returns (ResponseAddFeedback);
  rpc getFeedbackById(RequestGetFeedbackById) returns (ResponseGetFeedback);
  rpc getFeedbackByHomeworkIdAndStudentUsername(RequestGetFeedbackByHomeworkIdAndStudentUsername) returns (ResponseGetFeedback);
}
